--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "antd": "^5.8.6",
+    "axios": "^1.5.0",
+    "mysql2": "^3.6.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
